local-display-factory: defer initialization for CanGraphical=no seats

During startup a seat may not be ready for a display server yet.

This commit changes GDM to wait until the seat reports that it is
CanGraphical capable, before trying to put a login screen on it.

Closes https://gitlab.gnome.org/bugzilla-migration/gdm/issues/103